<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:widget="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.home.HomeActivity" >
	
	<SurfaceView
		android:id="@+id/backgrView"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
		android:visibility="gone" />
	
	<ProgressBar
	    android:id="@+id/progBar"
	    style="?android:attr/progressBarStyleLarge"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_centerVertical="true"
	    android:visibility="visible" />
		
	<TextView
        android:id="@+id/tv_progress"
        android:background="#00000000"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/progBar"
		android:layout_centerHorizontal="true"
		android:text="@string/wait"
        android:visibility="visible" />
	
	<LinearLayout android:id="@+id/footer"
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:layout_alignParentBottom="true"
	    android:orientation="horizontal"
	    android:visibility="gone"
		android:background="@color/grey" >
    
	    <Button 
	        style="@style/FooterTabs"
	        android:id="@+id/footer_home"
	        android:text="@string/icon_home"
        	android:textColor="@color/white"
	        android:layout_weight="0.6" />
	
	    <Button 
	        style="@style/FooterTabs"
	        android:id="@+id/footer_settings"
	        android:text="@string/icon_settings" 
        	android:textColor="@color/creme"
	        android:layout_weight="0.4" />
    
	</LinearLayout>

	<com.meetme.android.horizontallistview.HorizontalListView
	    android:id="@+id/sideLv"
	    android:scrollbars="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="80dp"
	    android:layout_above="@id/footer"
	    android:layout_marginBottom="15dp"
	    android:visibility="gone" />

	<com.cpiz.android.bubbleview.BubbleTextView
		android:id="@+id/bandBubble"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_above="@id/sideLv"
		android:layout_marginBottom="3dp"
		android:padding="6dp"
		android:text="@string/no_bands_at_all"
		android:textColor="@color/textColor"
		android:visibility="gone"
		widget:bb_borderColor="@color/white"
		widget:bb_borderWidth="2dp"
		widget:bb_cornerBottomLeftRadius="3dp"
		widget:bb_cornerBottomRightRadius="3dp"
		widget:bb_cornerTopLeftRadius="3dp"
		widget:bb_cornerTopRightRadius="3dp"
		widget:bb_arrowTo="@id/sideLv"/>

	<android.support.v4.view.ViewPager
	    android:id="@+id/mainView"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_above="@id/sideLv"
	    android:visibility="gone" />
	
	<TextView
	    android:id="@+id/tv_logout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentEnd="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginRight="9dp"
	    android:layout_marginEnd="9dp"
	    android:layout_marginTop="2dp"
	    android:gravity="end"
		android:text="@string/icon_logout"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textColor="@color/white"
	    android:visibility="gone" />
	
	<TextView
	    android:id="@+id/tv_refresh"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_marginRight="9dp"
	    android:layout_marginEnd="9dp"
	    android:layout_marginTop="2dp"
		android:layout_toLeftOf="@id/tv_logout"
	    android:gravity="end"
		android:text="@string/icon_refresh"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textColor="@color/white"
	    android:visibility="gone" />
	
	<TextView
	    android:id="@+id/tv_artist_number"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_marginRight="9dp"
	    android:layout_marginEnd="9dp"
		android:layout_toLeftOf="@id/tv_refresh"
	    android:gravity="end"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textColor="@color/white"
	    android:visibility="gone" />
	
	<FrameLayout android:id="@+id/settings_fragment"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_above="@id/footer"
	    android:background="@color/grey"
	    android:visibility="gone" />
	
	<FrameLayout android:id="@+id/band_fragment"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
		android:layout_margin="10dp"
	    android:layout_above="@id/footer"
	    android:background="#00ffffff"
	    android:visibility="gone" />
	
</RelativeLayout>